freeimage.nim


proc FreeImage_Copy*(dib: ptr FIBITMAP; left: cint; top: cint; right: cint; 
                     bottom: cint): ptr FIBITMAP {.importc: "FreeImage_Copy", 
    dynlib: FreeImageLib.}
proc FreeImage_Paste*(dst: ptr FIBITMAP; src: ptr FIBITMAP; left: cint; 
                      top: cint; alpha: cint): BOOL {.
    importc: "FreeImage_Paste", dynlib: FreeImageLib.}
proc FreeImage_Composite*(fg: ptr FIBITMAP; useFileBkg: BOOL; 
                          appBkColor: ptr RGBQUAD; bg: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_Composite", dynlib: FreeImageLib.}
proc FreeImage_JPEGCrop*(src_file: cstring; dst_file: cstring; left: cint; 
                         top: cint; right: cint; bottom: cint): BOOL {.
    importc: "FreeImage_JPEGCrop", dynlib: FreeImageLib.}
proc FreeImage_JPEGCropU*(src_file: ptr uint16; dst_file: ptr uint16; 
                          left: cint; top: cint; right: cint; bottom: cint): BOOL {.
    importc: "FreeImage_JPEGCropU", dynlib: FreeImageLib.}
proc FreeImage_PreMultiplyWithAlpha*(dib: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_PreMultiplyWithAlpha", dynlib: FreeImageLib.}
# background filling routines

proc FreeImage_FillBackground*(dib: ptr FIBITMAP; color: pointer; options: cint): BOOL {.
    importc: "FreeImage_FillBackground", dynlib: FreeImageLib.}
proc FreeImage_EnlargeCanvas*(src: ptr FIBITMAP; left: cint; top: cint; 
                              right: cint; bottom: cint; color: pointer; 
                              options: cint): ptr FIBITMAP {.
    importc: "FreeImage_EnlargeCanvas", dynlib: FreeImageLib.}
proc FreeImage_AllocateEx*(width: cint; height: cint; bpp: cint; 
                           color: ptr RGBQUAD; options: cint; 
                           palette: ptr RGBQUAD; red_mask: cuint; 
                           green_mask: cuint; blue_mask: cuint): ptr FIBITMAP {.
    importc: "FreeImage_AllocateEx", dynlib: FreeImageLib.}
proc FreeImage_AllocateExT*(typen: FREE_IMAGE_TYPE; width: cint; height: cint; 
                            bpp: cint; color: pointer; options: cint; 
                            palette: ptr RGBQUAD; red_mask: cuint; 
                            green_mask: cuint; blue_mask: cuint): ptr FIBITMAP {.
    importc: "FreeImage_AllocateExT", dynlib: FreeImageLib.}
# miscellaneous algorithms

proc FreeImage_MultigridPoissonSolver*(Laplacian: ptr FIBITMAP; ncycle: cint): ptr FIBITMAP {.
    importc: "FreeImage_MultigridPoissonSolver", dynlib: FreeImageLib.}

{.pop.}
